# iotgw-ng

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .trivyignore  CLAUDE.md  README.md  justfile
.claude/: README.md
.claude/agents/: docs-writer-codex.md  k8s-operator.md  kestra-expert.md  project-manager-backlog.md  stack-operator.md  supabase-function-developer.md  test-suite-creator.md
.github/workflows/: backend-image.yml  (+4 more)
ansible/: CLAUDE.md
backlog/: config.yml
deploy/: README.md  RELEASE.md
iotgw-ui/: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
kestra/: .env.example  CLAUDE.md  TESTING.md  docker-compose.yml  docker-compose.yml.bak
kms/: .env.example  .gitignore  CLAUDE.md  DOCKER_FIXES.md  README.md  docker-compose.yml  kms.toml  pyproject.toml
kms/contrib/: README.md
kms/pki-test/: README.md  ca.ext  client.ext  create_ca.sh  server.ext
kms/src/kms_tools/: __init__.py  convert_keys.py
kms/ssh-test/: README.md
kms/ssh-test/docker-test/: Dockerfile.client  Dockerfile.sshd  docker-compose.yml  test-ssh-keys.sh
secrets/: README.md  decommissioned-secrets.enc.env  headlamp-oidc.enc.env  iotgw-ui-backend.enc.env  iotgw-ui-root.enc.env  kestra-reporter.enc.env  kestra.enc.env  netmaker.enc.env  supabase.enc.env  traefik-tls.enc.yaml
supabase/: .env.example  CLAUDE.md  SKILLS_GUIDE.md  docker-compose.s3.yml  docker-compose.yml  package.json
tools/: smoke-pgnet.sh  verify.sh
(+498 files in other folders)
